--- a/init.org
+++ b/init.org
@@ -686,50 +686,80 @@ This is [[https://github.com/jsigman/unison-sync-mode][my own little package]] f
 #+end_src
 * Project Packages
 ** Project.el
-I'm trying migrating from ~projectile~ onto ~project.el~ for its purported benefits. ~project.el~ and ~eglot~ and ~Flymake~ don't like to play nice unless you use the built in. To do this with ~straight.el~, you have to give it a specific keyword.
+Migrating from ~projectile~ to ~project.el~ for better integration with ~eglot~ and ~Flymake~. This setup extends the default project detection to handle Git submodules correctly while maintaining existing functionality.
+
 #+begin_src emacs-lisp :load yes
-(use-package
- project
- :demand t
- :straight (:type built-in)
- :bind-keymap ("C-c p" . project-prefix-map)
- :config
- (setq project-vc-ignores
-       '("venv/"
-         "typings/"
-         "node_modules/"
-         ".mypy_cache/"
-         ".pytest_cache/"
-         ".cache/"
-         ".dvc/cache/"
-         ".dvc/tmp/"
-         ".jekyll-cache/"))
+(use-package project
+  :demand t
+  :straight (:type built-in)
+  :bind-keymap ("C-c p" . project-prefix-map)
+  :config
+  ;; Custom project detection function
+  (defun my/project-try-local (dir)
+    "Determine if DIR is a project by finding the nearest .git directory.
+This helps with correctly identifying Git submodules as separate projects."
+    (let ((root (locate-dominating-file dir ".git")))
+      (when root
+        (cons 'transient (expand-file-name root)))))
 
- ;; Function to add ignored directories to project-vc-ignores
- (defun my/add-project-ignore (dir)
-   (add-to-list 'project-vc-ignores dir))
+  ;; Add our custom function to the beginning of project-find-functions
+  (add-hook 'project-find-functions #'my/project-try-local)
 
- ;; Add each directory to project-vc-ignores
- (dolist (dir
-          '("venv"
-            "data"
-            "typings"
-            "node_modules"
-            ".mypy_cache"
-            ".pytest_cache"
-            ".cache"
-            ".dvc/cache"
-            ".dvc/tmp"
-            ".jekyll-cache"))
-   (my/add-project-ignore dir))
+  ;; Set up project-vc-ignores
+  (setq project-vc-ignores
+        '("venv/"
+          "typings/"
+          "node_modules/"
+          ".mypy_cache/"
+          ".pytest_cache/"
+          ".cache/"
+          ".dvc/cache/"
+          ".dvc/tmp/"
+          ".jekyll-cache/"))
 
- ;; Disable automatic project remembering
- (advice-add 'project-remember-project :override #'ignore)
+  ;; Function to add ignored directories to project-vc-ignores
+  (defun my/add-project-ignore (dir)
+    "Add DIR to the list of ignored directories in project-vc-ignores."
+    (add-to-list 'project-vc-ignores dir))
 
+  ;; Add additional directories to project-vc-ignores
+  (dolist (dir '("venv"
+                 "data"
+                 "typings"
+                 "node_modules"
+                 ".mypy_cache"
+                 ".pytest_cache"
+                 ".cache"
+                 ".dvc/cache"
+                 ".dvc/tmp"
+                 ".jekyll-cache"))
+    (my/add-project-ignore dir))
 
- ;; Prevent automatic removal of projects not found
- (advice-add 'project--remove-from-project-list :override #'ignore))
+  ;; Disable automatic project remembering
+  (advice-add 'project-remember-project :override #'ignore)
+
+  ;; Prevent automatic removal of projects not found
+  (advice-add 'project--remove-from-project-list :override #'ignore))
 #+end_src
+
+*** Notes on changes and functionality:
+1. Custom project detection:
+   - We've added a new function `my/project-try-local` that finds the nearest .git directory.
+   - This function is added to the beginning of `project-find-functions`, allowing it to handle Git submodules correctly.
+   - If `my/project-try-local` doesn't find a project, the default `project-try-vc` will still run.
+
+2. Existing functionality preserved:
+   - The `project-vc-ignores` setup remains unchanged.
+   - The `my/add-project-ignore` function and the `dolist` that adds additional ignores are kept as is.
+   - Advice to disable automatic project remembering and removal is maintained.
+
+3. Usage of built-in project.el:
+   - The `:straight (:type built-in)` ensures we're using the built-in version of project.el, which is important for compatibility with eglot and Flymake.
+
+4. Keybinding:
+   - The `C-c p` keybinding for the project prefix map is preserved.
+
+This setup should now correctly handle Git submodules as separate projects while maintaining all the customizations and ignores you had previously set up. The custom project detection function will be tried first, falling back to the default behavior if it doesn't find a project.
 ** Projectile
 #+begin_src emacs-lisp :load no
 (use-package
@@ -1796,59 +1826,37 @@ I'm currently not using DAP mode, and prefer to use python from the command line
 * Large Language Models in Emacs
 ** Github Copilot
 #+begin_src emacs-lisp :load yes
-(defcustom my-copilot-server-executable nil
-  "Path to the Copilot server executable."
-  :type 'string
-  :group 'my-customizations)
+(use-package copilot
+  :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
+  :bind (:map copilot-completion-map
+              ("M-<return>" . copilot-accept-completion))
+  :hook ((prog-mode . copilot-mode)
+         (yaml-mode . copilot-mode)
+         (org-mode . copilot-mode)
+         (direnv-envrc-mode . copilot-mode)
+         (conf-mode . copilot-mode))
+  :config
+  (setq copilot-max-char -1)
+  (setq copilot-indent-offset-warning-disable t)
 
-(defcustom my-copilot-install-dir nil
-  "Directory in which the Copilot server is installed."
-  :type 'string
-  :group 'my-customizations)
-
-(defun set-copilot-server-path ()
-  "Set the path to the Copilot server executable."
-  (let
-      ((global-copilot-server-path
-        "/opt/homebrew/lib/node_modules/copilot-node-server/copilot/dist/language-server.js"))
-    (if (file-exists-p global-copilot-server-path)
+  ;; Function to check if server is installed and up to date
+  (defun ensure-copilot-server-updated ()
+    (if (not (file-exists-p copilot--server-executable))
         (progn
-          (setq my-copilot-server-executable
-                global-copilot-server-path)
-          (setq my-copilot-install-dir
-                "/opt/homebrew/lib/node_modules/copilot-node-server"))
-      ;; Fallback to local installation if global server is not found
-      (let ((local-copilot-server-path
-             (expand-file-name
-              "~/.emacs.d/.cache/copilot/bin/copilot-node-server")))
-        (unless (file-exists-p local-copilot-server-path)
+          (message "Copilot server not found. Installing...")
           (copilot-install-server))
-        (setq my-copilot-server-executable local-copilot-server-path)
-        (setq my-copilot-install-dir
-              (expand-file-name "~/.emacs.d/.cache/copilot"))))))
+      (let ((installed-version (copilot-installed-version))
+            (required-version copilot-version))
+        (when (and installed-version
+                   (version< installed-version required-version))
+          (message "Updating Copilot server from %s to %s"
+                   installed-version required-version)
+          (copilot-reinstall-server)))))
 
-;; (set-copilot-server-path)
+  ;; Run the check when the package is loaded
+  (ensure-copilot-server-updated)
 
-(use-package
- copilot
- :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
- :bind
- (:map
-  copilot-completion-map (("M-<return>" . copilot-accept-completion)))
- :hook (prog-mode . copilot-mode)
- :hook (yaml-mode . copilot-mode)
- :hook (org-mode . copilot-mode)
- :hook (direnv-envrc-mode . copilot-mode)
- :hook (conf-mode . copilot-mode)
- ;; :init
- ;; (setq copilot--server-executable my-copilot-server-executable)
- ;; (setq copilot-install-dir my-copilot-install-dir)
- :config
- (setq copilot-max-char -1)
- (setq copilot-indent-offset-warning-disable t)
- ;; (setq copilot-log-level 'debug)
- ;;
- :ensure t)
+  :ensure t)
 #+end_src
 ** Codeium
 #+begin_src emacs-lisp :load no
