eh let's commit the TODOs

--- a/init.org
+++ b/init.org
@@ -267,8 +267,8 @@ I think this is a little too aggressive right now, but it's a cool idea.
 (use-package
  ctrlf
  :config
- (add-to-list
-  'ctrlf-minibuffer-bindings '("C-r" . ctrlf-backward-default))
+ (define-key
+  ctrlf-minibuffer-mode-map (kbd "C-r") 'ctrlf-backward-default)
  (setq ctrlf-default-search-style 'fuzzy-regexp)
  (setq ctrlf-default-search-style 'literal)
  (ctrlf-mode t))
@@ -572,7 +572,7 @@ This is [[https://github.com/jsigman/unison-sync-mode][my own little package]] f
 (use-package
  unison-sync-mode
  :straight
- (:host github :repo "jsigman/unison-sync-mode" :branch "repo-setup"))
+ (:host github :repo "jsigman/unison-sync-mode"))
 #+end_src
 ** Ripgrep
 #+begin_src emacs-lisp :load yes
@@ -689,57 +689,60 @@ This is [[https://github.com/jsigman/unison-sync-mode][my own little package]] f
 Migrating from ~projectile~ to ~project.el~ for better integration with ~eglot~ and ~Flymake~. This setup extends the default project detection to handle Git submodules correctly while maintaining existing functionality.
 
 #+begin_src emacs-lisp :load yes
-(use-package project
-  :demand t
-  :straight (:type built-in)
-  :bind-keymap ("C-c p" . project-prefix-map)
-  :config
-  ;; Custom project detection function
-  (defun my/project-try-local (dir)
-    "Determine if DIR is a project by finding the nearest .git directory.
+(use-package
+ project
+ :demand t
+ :straight (:type built-in)
+ :bind-keymap ("C-c p" . project-prefix-map)
+ :config
+ ;; Custom project detection function
+ (defun my/project-try-local (dir)
+   "Determine if DIR is a project by finding the nearest .git directory.
 This helps with correctly identifying Git submodules as separate projects."
-    (let ((root (locate-dominating-file dir ".git")))
-      (when root
-        (cons 'transient (expand-file-name root)))))
+   (let ((root (locate-dominating-file dir ".git")))
+     (when root
+       (cons 'transient (expand-file-name root)))))
 
-  ;; Add our custom function to the beginning of project-find-functions
-  (add-hook 'project-find-functions #'my/project-try-local)
+ ;; TODO - This function not working yet for monorepo folders
+ ;; Add our custom function to the beginning of project-find-functions
+ ;; (add-hook 'project-find-functions #'my/project-try-local)
 
-  ;; Set up project-vc-ignores
-  (setq project-vc-ignores
-        '("venv/"
-          "typings/"
-          "node_modules/"
-          ".mypy_cache/"
-          ".pytest_cache/"
-          ".cache/"
-          ".dvc/cache/"
-          ".dvc/tmp/"
-          ".jekyll-cache/"))
+ ;; Set up project-vc-ignores
+ (setq project-vc-ignores
+       '("venv/"
+         "typings/"
+         "node_modules/"
+         ".mypy_cache/"
+         ".pytest_cache/"
+         ".cache/"
+         ".dvc/cache/"
+         ".dvc/tmp/"
+         ".jekyll-cache/"))
 
-  ;; Function to add ignored directories to project-vc-ignores
-  (defun my/add-project-ignore (dir)
-    "Add DIR to the list of ignored directories in project-vc-ignores."
-    (add-to-list 'project-vc-ignores dir))
+ ;; Function to add ignored directories to project-vc-ignores
+ (defun my/add-project-ignore (dir)
+   "Add DIR to the list of ignored directories in project-vc-ignores."
+   (add-to-list 'project-vc-ignores dir))
 
-  ;; Add additional directories to project-vc-ignores
-  (dolist (dir '("venv"
-                 "data"
-                 "typings"
-                 "node_modules"
-                 ".mypy_cache"
-                 ".pytest_cache"
-                 ".cache"
-                 ".dvc/cache"
-                 ".dvc/tmp"
-                 ".jekyll-cache"))
-    (my/add-project-ignore dir))
+ ;; Add additional directories to project-vc-ignores
+ (dolist (dir
+          '("venv"
+            "data"
+            "typings"
+            "node_modules"
+            ".mypy_cache"
+            ".pytest_cache"
+            ".cache"
+            ".dvc/cache"
+            ".dvc/tmp"
+            ".jekyll-cache"))
+   (my/add-project-ignore dir))
 
-  ;; Disable automatic project remembering
-  (advice-add 'project-remember-project :override #'ignore)
+ ;; Disable automatic project remembering
+ (advice-add 'project-remember-project :override #'ignore)
 
-  ;; Prevent automatic removal of projects not found
-  (advice-add 'project--remove-from-project-list :override #'ignore))
+ ;; Prevent automatic removal of projects not found
+ (advice-add 'project--remove-from-project-list :override #'ignore))
 #+end_src
 
 *** Notes on changes and functionality:
@@ -1826,37 +1829,42 @@ I'm currently not using DAP mode, and prefer to use python from the command line
 * Large Language Models in Emacs
 ** Github Copilot
 #+begin_src emacs-lisp :load yes
-(use-package copilot
-  :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
-  :bind (:map copilot-completion-map
-              ("M-<return>" . copilot-accept-completion))
-  :hook ((prog-mode . copilot-mode)
-         (yaml-mode . copilot-mode)
-         (org-mode . copilot-mode)
-         (direnv-envrc-mode . copilot-mode)
-         (conf-mode . copilot-mode))
-  :config
-  (setq copilot-max-char -1)
-  (setq copilot-indent-offset-warning-disable t)
+(use-package
+ copilot
+ :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
+ :bind
+ (:map
+  copilot-completion-map ("M-<return>" . copilot-accept-completion))
+ :hook
+ ((prog-mode . copilot-mode)
+  (yaml-mode . copilot-mode)
+  (org-mode . copilot-mode)
+  (direnv-envrc-mode . copilot-mode)
+  (conf-mode . copilot-mode))
+ :config
+ (setq copilot-max-char -1)
+ (setq copilot-indent-offset-warning-disable t)
 
-  ;; Function to check if server is installed and up to date
-  (defun ensure-copilot-server-updated ()
-    (if (not (file-exists-p copilot--server-executable))
-        (progn
-          (message "Copilot server not found. Installing...")
-          (copilot-install-server))
-      (let ((installed-version (copilot-installed-version))
-            (required-version copilot-version))
-        (when (and installed-version
-                   (version< installed-version required-version))
-          (message "Updating Copilot server from %s to %s"
-                   installed-version required-version)
-          (copilot-reinstall-server)))))
+ ;; Function to check if server is installed and up to date
+ (defun ensure-copilot-server-updated ()
+   (if (not (file-exists-p copilot--server-executable))
+       (progn
+         (message "Copilot server not found. Installing...")
+         (copilot-install-server))
+     (let ((installed-version (copilot-installed-version))
+           (required-version copilot-version))
+       (when (and installed-version
+                  (version< installed-version required-version))
+         (message "Updating Copilot server from %s to %s"
+                  installed-version
+                  required-version)
+         (copilot-reinstall-server)))))
 
-  ;; Run the check when the package is loaded
-  (ensure-copilot-server-updated)
+ ;; Run the check when the package is loaded
+ ;; TODO: Still not working
+ ;; (ensure-copilot-server-updated)
 
-  :ensure t)
+ :ensure t)
 #+end_src
 ** Codeium
 #+begin_src emacs-lisp :load no
