--- a/init.org
+++ b/init.org
@@ -2623,7 +2623,7 @@ This is really only used in the publishing script of my emacs config, I don't ne
 #+end_src
 ** Forge
 Haven't yet found a great use for this.
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package
  forge
  :after magit
