--- a/init.org
+++ b/init.org
@@ -1237,206 +1237,6 @@ From [[https://github.com/minad/corfu/wiki#configuring-corfu-for-eglot][this sou
  :config (add-to-list 'completion-at-point-functions #'yasnippet-capf))
 #+END_SRC
 * LSP Server Support
-** LSP Mode
-*** lsp package setup
-#+begin_src emacs-lisp :load no
-(setq my/lsp-package "lsp")
-;------------------------LSP---------------------------;
-; PATCH BELOW
-(setenv "LSP_USE_PLISTS" "true")
-(use-package
- lsp-mode
- :custom (lsp-completion-provider :none) ; We use corfu
- :demand t
- :init
- (setq lsp-signature-render-documentation t)
- (setq lsp-signature-auto-activate t)
- (setq lsp-signature-doc-lines 3)
- (setq lsp-prefer-flymake nil)
- (setq lsp-idle-delay 0.0)
- (setq lsp-enable-snippet t)
- (setq lsp-keymap-prefix "M-P")
- (setq lsp-log-io nil)
- (setq lsp-print-performance nil)
- (setq lsp-response-timeout 10)
- (setq lsp-enable-on-type-formatting nil)
- (setq lsp-keep-workspace-alive nil)
- (setq lsp-headerline-breadcrumb-enable-diagnostics nil)
- (setq lsp-headerline-breadcrumb-enable nil)
- (setq read-process-output-max (* 1024 1024))
- (setq lsp-semantic-highlighting-faces t)
- (setq lsp-enable-imenu nil)
- (setq lsp-enable-text-document-color t)
- (setq lsp-completion-no-cache t)
- (setq lsp-completion-filter-on-incomplete nil)
- (setq lsp-enable-file-watchers t)
- (setq lsp-auto-execute-action nil)
- (setq lsp-auto-guess-root 't)
- (setq lsp-document-sync-method nil)
- (setq lsp-completion-use-last-result nil)
- (setq lsp-completion-show-kind t)
- (setq lsp-completion-show-detail t)
-
- ;; (defun my/lsp-mode-setup-completion ()
- ;;   (setf (alist-get
- ;;          'styles
- ;;          (alist-get 'lsp-capf completion-category-defaults))
- ;;         '(orderless))) ;; Configure orderless
-
- (defun my/lsp-mode-setup-completion ()
-   (setf (alist-get
-          'styles
-          (alist-get 'lsp-capf completion-category-defaults))
-         '(orderless)))
-
- ;; Optionally configure the cape-capf-buster.
- (setq-local completion-at-point-functions
-             (list (cape-capf-buster #'lsp-completion-at-point)))
- :hook
- (lsp-mode . lsp-enable-which-key-integration)
- (lsp-completion-mode . my/lsp-mode-setup-completion)
- ;; (lsp-mode . lsp-ui-mode)
- )
-
-(add-hook 'LaTeX-mode-hook #'lsp-deferred)
-(add-hook 'yaml-base-mode-hook #'lsp-deferred)
-(add-hook 'json-mode-hook #'lsp-deferred)
-(add-hook 'dockerfile-mode-hook #'lsp-deferred)
-
-(setq lsp-enable-on-type-formatting t)
-(setq lsp-enable-indentation t)
-
-(add-hook 'sh-mode-hook #'lsp-deferred)
-
-(use-package lsp-mssql :hook (sql-mode . lsp))
-;; (use-package
-;;  lsp-markdown
-;;  :config (add-hook 'markdown-mode-hook 'lsp-markdown))
-(add-to-list 'lsp-file-watch-ignored-directories "[/\\\\]\\venv\\'")
-(add-to-lis 'lsp-file-watch-ignored-directories "[/\\\\]\\.dvc\\'")
-(add-to-list
- 'lsp-file-watch-ignored-directories "[/\\\\]\\kubernetes\\'")
-(add-to-list 'lsp-file-watch-ignored-directories "[/\\\\]\\notes\\'")
-(add-to-list
- 'lsp-file-watch-ignored-directories "[/\\\\]\\checkpoints\\'")
-(add-to-list
- 'lsp-file-watch-ignored-directories "[/\\\\]\\experiments\\'")
-(add-to-list
- 'lsp-file-watch-ignored-directories "[/\\\\]\\.mypy_cache\\'")
-(add-to-list
- 'lsp-file-watch-ignored-directories "[/\\\\]\\.pytest_cache\\'")
-#+end_src
-*** lsp-ui
-For right now, I don't really like LSP UI, let's not load this config
-#+begin_src emacs-lisp :load no
-(use-package
- lsp-ui
- :config
- (setq lsp-ui-doc-enable nil)
- (setq lsp-ui-peek-enable nil)
- (setq lsp-ui-peek-fontify "never") ;; never, on-demand, or always
- (setq lsp-ui-peek-list-width 50)
- (setq lsp-ui-peek-peek-height 20)
- (setq lsp-ui-sideline-code-actions-prefix "")
- (setq lsp-ui-doc nil)
- ;inline right flush docs
- (setq lsp-ui-sideline-enable nil)
- (setq lsp-ui-sideline-ignore-duplicate t)
- (setq lsp-ui-sideline-show-code-actions nil)
- (setq lsp-ui-sideline-show-diagnostics nil)
- (setq lsp-ui-sideline-show-hover nil)
- (setq lsp-ui-sideline-show-symbol nil)
- (setq lsp-ui-sideline-delay 0.01)
- (add-hook
-  'lsp--managed-mode-hook
-  (lambda nil
-    (interactive)
-    (remove-hook 'post-self-insert-hook 'lsp--on-self-insert t)))
-
- (define-key
-  lsp-ui-mode-map
-  [remap xref-find-definitions]
-  #'lsp-ui-peek-find-definitions)
- (define-key
-  lsp-ui-mode-map
-  [remap xref-find-references]
-  #'lsp-ui-peek-find-references)
- (setq lsp-ui-flycheck-enable nil)
- (add-hook 'flycheck-mode-hook 'lsp-ui-sideline-mode)
-
- (require 'lsp-ui-flycheck)
- (define-key
-  lsp-ui-flycheck-list-mode-map
-  (kbd "<M-RET>")
-  'lsp-ui-flycheck-list--visit)
- (define-key
-  lsp-ui-flycheck-list-mode-map
-  (kbd "RET")
-  'lsp-ui-flycheck-list--view)
-
-
- (setq lsp-ui-doc-header t)
- (setq lsp-ui-doc-include-signature t)
- (setq lsp-ui-doc-max-height 30)
- (setq lsp-ui-doc-max-width 120)
- (setq lsp-ui-doc-position (quote at-point))
- (setq lsp-ui-doc-use-childframe nil)
-
- (setq lsp-ui-doc-use-webkit nil)
-
- :bind
- (:map
-  lsp-ui-imenu-mode-map
-  ("<return" . lsp-ui-imenu--view)
-  ("RET" . lsp-ui-imenu--view)))
-#+end_src
-*** lsp-iedit
-I'm now using iedit instead of my hand-crafted [[https://github.com/jsigman/lsp-mc][lsp-mc]] mode. It is integrated and works slightly better.
-#+begin_src emacs-lisp :load no
-(use-package iedit :init (setq iedit-toggle-key-default (kbd "C-,")))
-(defun my/lsp-iedit ()
-  (lsp-iedit-highlights)
-  )
-
-(setq my/lsp-highlight-setup "iedit")
-(pcase my/lsp-highlight-setup
-  ("iedit" (use-package
-    iedit
-    :init
-    (setq iedit-toggle-key-default nil)
-    (setq iedit-auto-narrow t)
-    :bind
-    (:map
-     lsp-mode-map
-     ("M-S" . lsp-iedit-highlights)
-     (:map iedit-mode-keymap ("C-g" . iedit--quit)))
-    :after (:all lsp-mode)
-    :custom-face (iedit-occurrence ((t (:background "Red"))))))
-  ("lsp-mc" (straight-use-package
-    '(lsp-mc :type git :host github :repo "jsigman/lsp-mc"))
-   (require 'lsp-mc) (add-hook 'lsp-mode-hook 'lsp-mc-mode)))
-#+end_src
-*** LSP Docker
-This mode is used to run language servers in a docker container. At some point I'd like to use this.
-#+begin_src emacs-lisp :load no
-(use-package lsp-docker)
-#+end_src
-*** Pyright LSP
-#+begin_src emacs-lisp :load no
-(add-hook 'python-mode-hook #'lsp-deferred)
-(setq lsp-diagnostics-disabled-modes
-      '(python-mode python-mode python-ts-mode))
-(use-package
-  lsp-pyright
-  :straight
-  '(lsp-pyright :type git :host github :repo "emacs-lsp/lsp-pyright")
-  :init (setq lsp-pyright-multi-root nil)
-  (setq lsp-pyright-auto-import-completions nil)
-  (setq lsp-pyright-diagnostic-mode "workspace")
-  (setq lsp-pyright-typechecking-mode "basic")
-  (setq lsp-pyright-disable-organize-imports t)
-  :config (setq lsp-pyright-log-level "trace"))
-#+end_src
 ** Eglot
 #+begin_src emacs-lisp :load yes
 (use-package
@@ -1717,13 +1517,8 @@ See also `eglot-server-capable' for :documentHighlightProvider."
 #+end_src
 ** Lua
 *** Non-gnu ELPA version
-#+begin_src emacs-lisp :load no
-(use-package
- lua-mode
- :ensure t
- :mode ("\\.lsyncd\\.conf\\'" . lua-mode))
-#+END_SRC
 *** lua-ts-mode
+TODO: They just started supporting this in emacs 30
 #+begin_src emacs-lisp :load no
 (use-package
  lua-ts-mode
